[tool.poetry]
name = "Neutron Bot"
version = "1.0.0"
description = "Discord bot made with discord.py for Codin-Nerds server"
authors = ["ItsDrike <itsdrikeofficial@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
python-dateutil = "^2.8.2"
"discord.py" = "^1.7.3"
asyncpg = "^0.23.0"
SQLAlchemy = "^1.4.22"
aiohttp = "^3.7.4"
deepdiff = "^5.5.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-bugbear = "^21.4.3"
flake8-import-order = "^0.18.1"
ipython = "^7.26.0"
pre-commit = "^2.13.0"
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
